Fish line alignment fix

--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,7 @@ body {
 .mini-right {
   margin-right: 4px;
 }
+
+.fish-line {
+  padding: 3px 0;
+}
